t_psformat = executable('psformat', 'psformat.c', dependencies : [hexhive_dep])
test('test_psformat', t_psformat)
t_psbuffer = executable('psbuffer', 'psbuffer.c', dependencies : [hexhive_dep])
test('test_psbuffer', t_psbuffer)
t_pssetget = executable('pssetget', 'pssetget.c', dependencies : [hexhive_dep])
test('test_pssetget', t_pssetget)
t_pspack = executable('pspack', 'pspack.c', dependencies : [hexhive_dep])
test('test_pspack', t_pspack)
t_pssvec = executable('pssvec', 'pssvec.c', dependencies : [hexhive_dep])
test('test_pssvec', t_pssvec)
t_hmap = executable('hmaptest', 'hmaptest.c', dependencies : [hexhive_dep])
test('test_hmap', t_hmap)
t_assoca = executable('assocatest', 'assocatest.c', dependencies : [hexhive_dep])
test('test_assoca', t_assoca)
