t_psformat = executable('psformat', 'psformat.c', dependencies : [emilia_dep])
test('test_psformat', t_psformat)
t_psbuffer = executable('psbuffer', 'psbuffer.c', dependencies : [emilia_dep])
test('test_psbuffer', t_psbuffer)
t_pssetget = executable('pssetget', 'pssetget.c', dependencies : [emilia_dep])
test('test_pssetget', t_pssetget)
t_pspack = executable('pspack', 'pspack.c', dependencies : [emilia_dep])
test('test_pspack', t_pspack)
t_pssvec = executable('pssvec', 'pssvec.c', dependencies : [emilia_dep])
test('test_pssvec', t_pssvec)
t_assoca = executable('assocatest', 'assocatest.c', dependencies : [emilia_dep])
test('test_assoca', t_assoca)
